fix CSS for path and overflow text issue

--- a/life3.css
+++ b/life3.css
@@ -86,7 +86,7 @@ div.budget-content-editor table td {
   padding: 0;
 }
 
-div.event-title-editor input {
+div.event-editor input {
   width: 100%;
   border: none;
   border-bottom: solid 1px rgba(0, 0, 0, .16);
@@ -209,6 +209,7 @@ div.checklist-row div.checklist-description-container textarea {
   resize: none;
   outline: none;
   border: solid 1px rgba(0, 0, 0, .16);
+  overflow-y: hidden;
   width: 100%;
 }
 
